--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@ body, h1, h2, h3, h4, h5, h6, p, ul, li {
     font-style: new roman;
     word-spacing: 1.5;
 }
+
+/* Global styles */
 body {
-    font-family: new roman, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 header {
@@ -40,12 +42,12 @@ nav ul li {
     background-color: #f9f9f9;
 }
 
-h2 {
+.hero h2 {
     font-size: 36px;
     margin-bottom: 20px;
 }
 
-p {
+.hero p {
     font-size: 18px;
     color: #555;
     margin-bottom: 40px;
