--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
             margin: 0;
             padding: 0;
         body {
-            font-family: New Roman, sans-serif;
-
-        }
+            font-family: {
+  font-family: "Times New Roman", Times, serif;
+}
 
        
 
