--- a/style.css
+++ b/style.css
@@ -1,113 +1,44 @@
-    <style>
-
-        /* Additional CSS styles */
-
         body {
             margin: 0;
             padding: 0;
-        body {
-            font-family: {
-  font-family: "Times New Roman", Times, serif;
-}
-
-       
-
+            font-family: Times New Roman, Times, serif;
+        }
         header {
-
-            background-color: #256824;
-
+            background-color: #333;
             color: #fff;
-
             padding: 20px;
-
-        }
-
-       
-
-        nav {
-
+        }
+        nav {
             display: flex;
-
             justify-content: space-between;
-
             align-items: center;
-
         }
-
-       
-
         nav ul {
-
             list-style: none;
-
             display: flex;
-
         }
-
-       
-
         nav ul li {
-
             margin-right: 20px;
-
         }
-
-       
-
         nav ul li a {
-
             color: #fff;
-
             text-decoration: none;
-
             font-weight: bold;
-
         }
-
-       
-
         nav ul li a:hover {
-
             color: #a8dadc;
-
         }
-
-       
-
         section {
-
             padding: 40px;
-
         }
-
-       
-
         h1 {
-
             font-size: 32px;
-
             margin-bottom: 20px;
-
         }
-
-       
-
         h2 {
-
             font-size: 24px;
-
             margin-bottom: 10px;
-
         }
-
-       
-
         p {
-
-            margin-bottom: 20px;
-
+           margin-bottom: 20px;
         }
-
-    </style>
-
-</head>
