--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+Certainly! Here's an improved version of the CSS code with some additional enhancements:
+
+```css
 /* Use a modern font and style the header */
 header {
     background-color: #f5f5f5;
